--- a/linhas.qmd
+++ b/linhas.qmd
@@ -3,9 +3,163 @@ title: "Linhas de Pesquisa"
 ---
 
 ::: panel-tabset
-## Linha 1: Processos Tecnológicos
+## Linha 1 - Processamento de Bio-recursos Aquáticos
 
-## Linha 2: Análises Químicas
+![](images/clipboard-822417708.png){width="350"}
 
-## Linha 3: Análise Estatísticas
+A linha de pesquisa em **Processamento de Biorecursos Aquáticos** explora o desenvolvimento de técnicas e processos tecnológicos para **transformação sustentável** de recursos de origem aquática em produtos de alto valor agregado.
+
+O foco principal é agregar valor, melhorar a qualidade, conservar as características nutricionais e promover o aproveitamento integral de pescados e subprodutos da pesca e aquicultura.
+
+### 🎯 Objetivos Principais
+
+> 📌 **Desenvolver processos tecnológicos** para conservação, transformação e aproveitamento de biorecursos.\
+> 📌 **Valorizar subprodutos** da pesca e aquicultura através de rotas inovadoras de processamento.\
+> 📌 **Promover a sustentabilidade** na utilização de recursos marinhos e de água doce.
+
+### 🔬 Técnicas e Processos Estudados
+
+A linha utiliza métodos tradicionais e inovadores adaptados às características dos biorecursos locais:
+
+-   **Secagem Solar e Mecânica** ☀️💨\
+    *(Desidratação controlada de pescados e subprodutos.)*
+
+-   **Extração de Compostos de Interesse** 🧬
+
+    -   Quitosana
+    -   Gelatina
+    -   Hidrolisados Proteicos
+    -   Óelo de Peixe
+
+-   **Aproveitamento Integral de Subprodutos** ♻️\
+    *(Transformação de resíduos em novos insumos industriais e alimentícios.)*
+
+### 🧠 Aplicações em Desenvolvimento
+
+> 🐟 **Conservação de Peixes e Camarões:**\
+> Técnicas de secagem e salga otimizadas para prolongar a vida útil e manter qualidade.
+
+> 🛢️ **Produção de Óleo e Hidrolisados:**\
+> Processamento de vísceras e resíduos para obtenção de óleo de pescado e concentrados proteicos.
+
+> 🧫 **Produção de Quitina e Quitosana:**\
+> Aproveitamento de carapaças de camarão para obtenção de biopolímeros de alto valor.
+
+> 🥢 **Desenvolvimento de Produtos Fermentados:**\
+> Aplicação de fermentação para criação de produtos inovadores a partir de pescados e resíduos.
+
+### 🚀 Impacto e Inovação
+
+A pesquisa em processamento de biorecursos aquáticos traz benefícios como:
+
+-   **Aproveitamento sustentável** de recursos e subprodutos.
+
+-   **Agregação de valor** a cadeias produtivas locais.
+
+-   **Geração de novos produtos** com aplicação em alimentos, cosméticos, farmacêuticos e biomateriais.
+
+-   **Redução de impactos ambientais** pela transformação de resíduos.
+
+![Produção de Quitosana a partir de exoesqueleto de crustáceos](images/clipboard-985544899.png){fig-align="center" width="490"}
+
+![Produção de gelatina de pele de peixes](images/colageno-gelatina.png){fig-align="center" width="491"}
+
+![Produçao de Hidrolisados de Pescados](images/peptídeos.png){fig-align="center" width="492"}
+
+![Produção de Óleo de Peixe e HPP](images/hpp-oelo.png){fig-align="center" width="491"}
+
+**Palavras-chave estratégicas:**\
+*Biorrefinaria de pescado, aproveitamento de resíduos pesqueiros, biomoléculas marinhas, colágeno de peixe, quitosana, sustentabilidade na pesca, subprodutos da indústria pesqueira, processos biotecnológicos, óleo de pescado, hidrolisados proteicos, tecnologias limpas.*
+
+## Linha de Pesquisa 2: 🧪 Quimiometria Aplicada a Biorecursos Aquáticos
+
+![](images/clipboard-3413463858.png){fig-align="center" width="443"}
+
+A linha de pesquisa em **Quimiometria Aplicada a Biorecursos Aquáticos** busca integrar técnicas analíticas avançadas e métodos estatísticos multivariados para a **extração de informações químicas relevantes** de organismos e produtos aquáticos.
+
+Essa abordagem permite **caracterizar** biorecursos de forma detalhada, **monitorar processos de transformação** e **desenvolver soluções inovadoras** para agregação de valor na pesca e aquicultura.
+
+### 🎯 Objetivos Principais
+
+> 📌 **Caracterizar** biorecursos aquáticos quanto à sua composição química, estrutural e funcional.\
+> 📌 **Modelar e predizer** propriedades de interesse utilizando métodos estatísticos e machine learning.\
+> 📌 **Controlar a qualidade** de matérias-primas e produtos processados de forma não destrutiva e rápida.
+
+### 🔬 Técnicas Analíticas Utilizadas
+
+A linha de pesquisa faz uso de técnicas modernas de análise química combinadas a abordagens quimiométricas, tais como:
+
+-   **Espectroscopia no Infravermelho Próximo (NIR)** 🧬\
+    *(Qualificação de óleos, proteínas, umidade em peixes e derivados.)*
+-   **Cromatografia Gasosa (GC)** 🧪\
+    *(Perfil de ácidos graxos para caracterização de espécies.)*
+-   **Cromatografia Líquida (HPLC)** 💧\
+    *(Determinação de compostos bioativos e marcadores químicos.)*
+-   **Modelagem Multivariada (PCA, PLS, SIMCA)** 📈\
+    *(Análise exploratória e predição de propriedades.)*
+
+### 🧠 Aplicações em Desenvolvimento
+
+> 📦 **Controle de Qualidade:**\
+> Aplicação de espectroscopia NIR para monitoramento rápido e não destrutivo da composição de pescado.
+
+> 🌊 **Caracterização Química:**\
+> Estudo de ácidos graxos em tecidos de *Lutjanídeos* para autenticação de espécies e rastreabilidade.
+
+> 🐟 **Qualificação de Bioprodutos:**\
+> Determinação de proteínas e lipídios em matérias-primas para otimização de processos industriais.
+
+> 🧩 **Desenvolvimento de Modelos Preditivos:**\
+> Construção de modelos quimiométricos para prever qualidade e frescor de produtos aquáticos.
+
+### 🚀 Impacto e Inovação
+
+A combinação da quimiometria com a ciência dos biorecursos aquáticos representa uma estratégia de inovação para:
+
+-   **Reduzir custos** de análises laboratoriais.
+-   **Aumentar a velocidade** de tomada de decisão em processos produtivos.
+-   **Adicionar valor** aos produtos pesqueiros e aquícolas, com foco em qualidade e rastreabilidade.
+-   **Promover a sustentabilidade** no uso de recursos naturais, com técnicas analíticas não destrutivas.
+
+## Linha 3 - Secagem Solar Aplicada ao Processamento de Biorrecursos
+
+![](images/clipboard-1480639932.png){width="272"}
+
+A secagem solar com auxílio de painéis fotovoltaicos representa uma tecnologia limpa e sustentável para o processamento de biorecursos, especialmente produtos pesqueiros, agrícolas e derivados de biomassa. Essa metodologia consiste em utilizar a energia solar de maneira híbrida: tanto para o aquecimento do ar (que promove a desidratação dos materiais), quanto para alimentar ventiladores que controlam a circulação do ar no interior do secador.
+
+O sistema é composto basicamente por um coletor solar térmico, que aquece o ar ambiente, e por um painel fotovoltaico, que gera eletricidade para ventiladores de exaustão forçada. Esse arranjo permite melhorar significativamente a eficiência do processo de secagem, promovendo:
+
+-   Redução do teor de umidade em menor tempo;
+
+-   Maior controle sobre a temperatura e a renovação do ar;
+
+-   Preservação das propriedades físico-químicas e sensoriais dos produtos;
+
+-   Minimização do consumo de fontes de energia não renováveis.
+
+Entre os principais bioprodutos beneficiados pela secagem solar destacam-se pescados, frutos do mar, frutas, plantas medicinais e subprodutos industriais de origem biológica, visando tanto a conservação como a agregação de valor comercial.
+
+Esta linha de pesquisa visa desenvolver, otimizar e aplicar técnicas de secagem solar sustentável, alinhando eficiência energética, qualidade de produto final e responsabilidade ambiental.
+
+## Linha 4 — Grupo de Pesquisa em Estatística Aplicada e Ciência de Dados em R
+
+![](images/clipboard-1207951533.png){width="320"}
+
+🎯 **Missão:**\
+Desenvolver rotinas computacionais em R, fortalecer a formação acadêmica e impulsionar a pesquisa aplicada nas áreas de Ciências Agrárias e Biológicas no Campus de Bragança.
+
+🛠️ **Eixos Principais:**
+
+-   Criação de códigos em R para análises estatísticas, ecológicas, agrícolas e biológicas.
+
+-   Planejamento e otimização de experimentos com ferramentas modernas de ciência de dados.
+
+-   Desenvolvimento de relatórios dinâmicos com Quarto e uso de Git/GitHub para colaboração científica.
+
+-   Formação de alunos e pesquisadores através de minicursos e materiais educativos.
+
+-   Análise de séries temporais, dados espaciais e imagens biológicas.
+
+🌱 **Impacto Esperado:**\
+Capacitar pesquisadores para enfrentarem desafios científicos complexos, fomentar a inovação nas Ciências Agrárias e Biológicas e ampliar a produção científica do campus.
 :::
