--- a/linhas.qmd
+++ b/linhas.qmd
@@ -71,7 +71,7 @@ A pesquisa em processamento de biorecursos aquáticos traz benefícios como:
 **Palavras-chave estratégicas:**\
 *Biorrefinaria de pescado, aproveitamento de resíduos pesqueiros, biomoléculas marinhas, colágeno de peixe, quitosana, sustentabilidade na pesca, subprodutos da indústria pesqueira, processos biotecnológicos, óleo de pescado, hidrolisados proteicos, tecnologias limpas.*
 
-## Linha de Pesquisa 2: 🧪 Quimiometria Aplicada a Biorecursos Aquáticos
+## Linha 2: 🧪 Quimiometria Aplicada a Biorecursos Aquáticos
 
 ![](images/clipboard-3413463858.png){fig-align="center" width="466"}
 
