--- a/linhas-velhas.qmd
+++ b/linhas-velhas.qmd
@@ -1,18 +1,9 @@
 ---
 title: "Linhas de Pesquisa"
-format: html
 ---
 
-Nesta página, você pode navegar diretamente pelas nossas linhas de pesquisa:
-
--   [Linha 1 - Processamento de Bio-recursos Aquáticos](#linha-1---processamento-de-bio-recursos-aquáticos)
--   [Linha 2 - Quimiometria Aplicada a Biorecursos Aquáticos](#linha-2---quimiometria-aplicada-a-biorecursos-aquáticos)
--   [Linha 3 - Secagem Solar Sustentável de Bioprodutos Pesqueiros](#linha-3---secagem-solar-sustentável-de-bioprodutos-pesqueiros)
--   [Linha 4 - Grupo de Pesquisa em Estatística Aplicada e Ciência de Dados em R](#linha-4---grupo-de-pesquisa-em-estatística-aplicada-e-ciência-de-dados-em-r)
-
-------------------------------------------------------------------------
-
-## Linha 1 - Processamento de Bio-recursos Aquáticos {#linha-1---processamento-de-bio-recursos-aquáticos}
+::: panel-tabset
+## Linha 1 - Processamento de Bio-recursos Aquáticos
 
 A linha de pesquisa em **Processamento de Biorecursos Aquáticos** explora o desenvolvimento de técnicas e processos tecnológicos para **transformação sustentável** de recursos de origem aquática em produtos de alto valor agregado.
 
@@ -130,7 +121,7 @@ A combinação da quimiometria com a ciência dos biorecursos aquáticos represe
 -   **Adicionar valor** aos produtos pesqueiros e aquícolas, com foco em qualidade e rastreabilidade.
 -   **Promover a sustentabilidade** no uso de recursos naturais, com técnicas analíticas não destrutivas.
 
-## Linha 3 - Secagem Solar Sustentável de Bioprodutos Pesqueiros {#linha-3---secagem-solar-sustentável-de-bioprodutos-pesqueiros}
+## Linha 3 - Secagem Solar Sustentável de Bioprodutos Pesqueiros
 
 A secagem solar com painéis fotovoltaicos é uma tecnologia limpa que combina o uso da radiação solar para aquecimento e a geração de energia para ventilação forçada, promovendo a desidratação eficiente de produtos pesqueiros, agrícolas e biológicos. O sistema otimiza o processo de secagem, reduzindo o teor de umidade em menor tempo, preservando a qualidade dos produtos e minimizando o consumo de energia não renovável, contribuindo para a conservação e agregação de valor de bioprodutos.
 
@@ -175,3 +166,4 @@ Desenvolver rotinas computacionais em R, fortalecer a formação acadêmica e im
 
 🌱 **Impacto Esperado:**\
 Capacitar pesquisadores para enfrentarem desafios científicos complexos, fomentar a inovação nas Ciências Agrárias e Biológicas e ampliar a produção científica do campus.
+:::
