--- a/blog/calendarios/calendario-2p-2025.qmd.qmd
+++ b/blog/calendarios/calendario-2p-2025.qmd.qmd
@@ -5,12 +5,8 @@ format:
   html: default
 ---
 
-```{=html}
-<iframe
-  src="../../resources/calendarios_EP_todas.html"
+\`\`\`{=html} <iframe src="../../resources/calendarios_EP_todas.html"
   width="100%"
   height="800"
   style="border:none;"
-  title="Calendários de Aulas 2P 2025">
-</iframe>
-
+  title="Calendários de Aulas 2P 2025"> </iframe>
